environments/base/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kustomize-microservices-spa
  labels:
    app: kustomize-microservices-spa
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: kustomize-microservices-spa
