environments/base/client/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kustomize-microservices-spa
  labels:
    app: kustomize-microservices-spa
spec:
  to:
    kind: Service
    name: kustomize-microservices-spa
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
